--- a/styles/globals.css
+++ b/styles/globals.css
@@ -161,11 +161,7 @@
   }
 }
 
-/* Swagger UI styling */
-.dark .swagger-ui {
-  filter: invert(1) hue-rotate(180deg);
-}
-
+/* Swagger UI base styling */
 .swagger-ui {
   padding-top: 20px;
 }
